feat: The rest of the API methods
